add authorization and rbac

--- a/.env
+++ b/.env
@@ -1,9 +1,16 @@
 NODE_ENV=local
 
 /* API INFO */
+APP_HOST=127.0.0.1
 APP_PORT=8088
 API_PREFIX=api
 API_VERSION=v0
+
+/* TOKEN INFO */
+TOKEN_SECRET=T0k3nS3cr3t
+TOKEN_KEY=notSoSecret
+TOKEN_ISSUER=api.basic.fastify
+TOKEN_EXPIRES=30000
 
 /* DATABASE INFORMATION */
 DB_SQL_CLIENT=pg
