--- a/package.json
+++ b/package.json
@@ -7,40 +7,36 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "test": "jest --coverage"
+    "test": "lab -c -L -m 0 -a @hapi/code --coverage-exclude index.js"
   },
   "dependencies": {
     "bcrypt": "5.0.x",
     "dotenv": "8.2.x",
     "fastify": "3.5.x",
+    "fastify-jwt": "^2.1.3",
     "fastify-plugin": "2.3.x",
     "fastify-sensible": "3.0.x",
+    "fastify-swagger": "^3.4.0",
     "fluent-schema": "1.0.x",
     "knex": "0.21.x",
     "pg": "8.3.x",
-    "pino-pretty": "^4.2.x"
+    "pino-pretty": "4.2.x"
   },
   "devDependencies": {
-    "jest": "26.1.x"
+    "@hapi/code": "7.0.x",
+    "@hapi/lab": "21.0.x",
+    "knex-cleaner": "1.3.x"
   },
   "eslintConfig": {
     "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended"
+      "@hapi/eslint-config-hapi"
     ],
     "env": {
       "node": true,
-      "es11": true,
-      "browser": true
+      "es2020": true
     },
     "parserOptions": {
-      "ecmaVersion": 11,
-      "sourceType": "module"
+      "ecmaVersion": 2020
     }
-  },
-  "jest": {
-    "testMatch": [
-      "**/test/**/*.js?(x)"
-    ]
   }
 }
