add test and support for transaction

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV=local
+// NODE_ENV=local
 
 /* API INFO */
 APP_HOST=127.0.0.1
@@ -13,9 +13,9 @@ TOKEN_ISSUER=api.basic.fastify
 TOKEN_EXPIRES=30000
 
 /* DATABASE INFORMATION */
-DB_SQL_CLIENT=pg
-DB_SQL_HOST=localhost
-DB_SQL_USER=postgres
-DB_SQL_PASSWORD=postgres
-DB_SQL_NAME=fastify
-DB_SQL_PORT=5432
+DB_CLIENT=pg
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=fastify
+DB_PORT=5432
