--- a/package.json
+++ b/package.json
@@ -7,30 +7,38 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "test": "lab -c -L -m 0 -a @hapi/code --coverage-exclude index.js"
+    "lint": "npm run lint:standard",
+    "lint:standard": "eslint",
+    "unit:tap": "tap -J --coverage-report=html --no-browser test/*.js",
+    "unit:lab": "lab -c -L -m 0 -a @hapi/code --coverage-exclude index.js",
+    "test": "npm run lint && npm run unit:lab",
+    "test:tap": "npm run lint && TEST_USE_TAP=true && npm run unit:tap"
   },
   "dependencies": {
     "bcrypt": "5.0.x",
     "dotenv": "8.2.x",
+    "eslint": "7.11.x",
     "fastify": "3.5.x",
     "fastify-jwt": "^2.1.3",
     "fastify-plugin": "2.3.x",
     "fastify-sensible": "3.0.x",
-    "fastify-swagger": "^3.4.0",
+    "fastify-swagger": "3.4.x",
     "fluent-schema": "1.0.x",
     "knex": "0.21.x",
+    "mongoose": "^5.10.9",
     "pg": "8.3.x",
     "pino-pretty": "4.2.x"
   },
   "devDependencies": {
-    "@hapi/code": "7.0.x",
-    "@hapi/lab": "21.0.x",
-    "knex-cleaner": "1.3.x"
+    "@hapi/code": "8.0.x",
+    "@hapi/lab": "24.0.x",
+    "axios": "0.20.x",
+    "knex-cleaner": "1.3.x",
+    "request": "2.88.x",
+    "tap": "14.10.x"
   },
   "eslintConfig": {
-    "extends": [
-      "@hapi/eslint-config-hapi"
-    ],
+    "extends": "plugin:@hapi/recommended",
     "env": {
       "node": true,
       "es2020": true
