--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fastify-sample",
+  "name": "fastify-basic-api",
   "version": "0.0.1",
-  "description": "Sample project implementing Fastify",
+  "description": "Sample Fastify api server",
   "main": "index.js",
   "author": "roxxydev",
   "license": "MIT",
@@ -19,13 +19,13 @@
     "dotenv": "8.2.x",
     "eslint": "7.11.x",
     "fastify": "3.5.x",
-    "fastify-jwt": "^2.1.3",
+    "fastify-jwt": "2.1.x",
     "fastify-plugin": "2.3.x",
     "fastify-sensible": "3.0.x",
     "fastify-swagger": "3.4.x",
     "fluent-schema": "1.0.x",
     "knex": "0.21.x",
-    "mongoose": "^5.10.9",
+    "mongoose": "5.10.x",
     "pg": "8.3.x",
     "pino-pretty": "4.2.x"
   },
