--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 // NODE_ENV=local
 
 /* API INFO */
-APP_HOST=localhost
+APP_HOST=0.0.0.0
 APP_PORT=8088
 API_PREFIX=api
 API_VERSION=v0
@@ -14,7 +14,7 @@ TOKEN_EXPIRES=30000
 
 /* DATABASE INFORMATION */
 DB_CLIENT=pg
-DB_HOST=localhost
+DB_HOST=0.0.0.0
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=fastify
